# watsonx-workshop

./: .gitignore  404.html  LICENSE  Makefile  README.md  index.html  mkdocs copy.yml  mkdocs.yml  pyproject.toml  sitemap.xml
accelerator/: README.md  config.yaml  project.json  project:readme.json
docs/: NOTEBOOKS.md  index.md  portal.md  resources.md
labs-src/: README.md  use-watsonx-chroma-and-langchain-to-answer-questions-rag.ipynb
rag-accelerator/: .env.sample  Makefile  pyproject.toml
rag-accelerator/assets/data_asset/: RAG-OpenAPI.json  elastic_search_hybrid_multisearch_template.json  elastic_search_hybrid_rrf_template.json  elastic_search_multilingual_template.json  expert_profiles_data.json
rag-accelerator/assets/notebook/: notebook:Ingestion_of_Expert_Profile_data_to_Vector_DB.ipynb  notebook:Test_Queries_for_Vector_DB.ipynb
rag-accelerator/assets/orchestration_flow/: orchestration_flow:747a121c-53f0-4edd-a619-6bb21ca96972-0
rag-accelerator/assets/wx_prompt/: wx_prompt:Prompt_Topic_Labeling__da__r1o3lydg8u.json  wx_prompt:RAGtemplate-granite-3-2_8b_instruct__da__vsow7z84ux.json  wx_prompt:RAGtemplate-granite-3_2b_instruct__da__5xqw4sxmv5.json  wx_prompt:RAGtemplate-llama-4-maverick-17b-128e-instruct__da__ul97xg1g3n.json
rag-accelerator/assettypes/: model_entry_user.json
rag-accelerator/rag/: pipeline.py
rag-accelerator/tools/: embed_index.py
rag-accelerator/ui/: app.py
rag-app/: .env.sample  Dockerfile  README.md  es.env.sample  requirements.txt
resources/: index.html
scripts/: bootstrap.sh  export_pdf.sh  generate_all_slides.sh  (+2 more)
(+252 files in other folders)
